@@ -1,3 +1,9 @@
+Fri Oct 22 11:36:48 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.h:
+        * connectors/dds4ccm/tests/ListenOneByOne/Sender/LOBO_Test_Sender_exec.cpp:
+          Regenerated with -Gex -Gexr and added user code again
+
 Fri Oct 22 11:39:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/ami4ccm/tutorials/Hello/Tutorial/Code/GeneratedExec/Hello_MyFoo_objA_conn_i.h:
